@@ -11,8 +11,13 @@
 
 package org.opensearch.security.dlic.rest.api;
 
+import static org.opensearch.rest.RestRequest.Method.GET;
+import static org.opensearch.rest.RestRequest.Method.PUT;
+import static org.opensearch.security.dlic.rest.api.Responses.ok;
+import static org.opensearch.security.dlic.rest.api.Responses.response;
+import static org.opensearch.security.dlic.rest.support.Utils.addRoutesPrefix;
+
 import java.io.IOException;
-import java.nio.file.Path;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -20,43 +25,26 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.opensearch.action.index.IndexResponse;
 import org.opensearch.client.Client;
 import org.opensearch.cluster.service.ClusterService;
 import org.opensearch.common.settings.Settings;
-import org.opensearch.core.xcontent.XContentBuilder;
-import org.opensearch.rest.BytesRestResponse;
+import org.opensearch.core.xcontent.ToXContent;
 import org.opensearch.rest.RestChannel;
-import org.opensearch.rest.RestController;
-import org.opensearch.rest.RestRequest;
-import org.opensearch.core.rest.RestStatus;
-import org.opensearch.security.auditlog.AuditLog;
-import org.opensearch.security.configuration.AdminDNs;
-import org.opensearch.security.configuration.ConfigurationRepository;
+import org.opensearch.security.dlic.rest.validation.EndpointValidator;
 import org.opensearch.security.dlic.rest.validation.RequestContentValidator;
 import org.opensearch.security.dlic.rest.validation.RequestContentValidator.DataType;
-import org.opensearch.security.privileges.PrivilegesEvaluator;
 import org.opensearch.security.securityconf.impl.CType;
 import org.opensearch.security.securityconf.impl.SecurityDynamicConfiguration;
 import org.opensearch.security.securityconf.impl.v7.ConfigV7;
-import org.opensearch.security.ssl.transport.PrincipalExtractor;
 import org.opensearch.security.support.ConfigConstants;
 import org.opensearch.threadpool.ThreadPool;
 
-import static org.opensearch.rest.RestRequest.Method.GET;
-import static org.opensearch.rest.RestRequest.Method.PUT;
-import static org.opensearch.security.dlic.rest.support.Utils.addRoutesPrefix;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 
 public class MultiTenancyConfigApiAction extends AbstractApiAction {
-
-    private final static Logger LOGGER = LogManager.getLogger(MultiTenancyConfigApiAction.class);
 
     public static final String DEFAULT_TENANT_JSON_PROPERTY = "default_tenant";
     public static final String PRIVATE_TENANT_ENABLED_JSON_PROPERTY = "private_tenant_enabled";
@@ -66,7 +54,7 @@ public class MultiTenancyConfigApiAction extends AbstractApiAction {
         ImmutableList.of(new Route(GET, "/tenancy/config"), new Route(PUT, "/tenancy/config"))
     );
 
-    private final static Set<String> ACCEPTABLE_DEFAULT_TENANTS = ImmutableSet.of(
+    private final static Set<String> ACCEPTABLE_DEFAULT_TENANTS = Set.of(
         ConfigConstants.TENANCY_GLOBAL_TENANT_DEFAULT_NAME,
         ConfigConstants.TENANCY_GLOBAL_TENANT_NAME,
         ConfigConstants.TENANCY_PRIVATE_TENANT_NAME
@@ -83,109 +71,98 @@ public class MultiTenancyConfigApiAction extends AbstractApiAction {
     }
 
     public MultiTenancyConfigApiAction(
-        final Settings settings,
-        final Path configPath,
-        final RestController controller,
-        final Client client,
-        final AdminDNs adminDNs,
-        final ConfigurationRepository cl,
-        final ClusterService cs,
-        final PrincipalExtractor principalExtractor,
-        final PrivilegesEvaluator evaluator,
+        final ClusterService clusterService,
         final ThreadPool threadPool,
-        final AuditLog auditLog
+        final SecurityApiDependencies securityApiDependencies
     ) {
-        super(settings, configPath, controller, client, adminDNs, cl, cs, principalExtractor, evaluator, threadPool, auditLog);
+        super(Endpoint.TENANTS, clusterService, threadPool, securityApiDependencies);
+        this.requestHandlersBuilder.configureRequestHandlers(this::multiTenancyConfigApiRequestHandlers);
     }
 
     @Override
-    protected RequestContentValidator createValidator(final Object... params) {
-        return RequestContentValidator.of(new RequestContentValidator.ValidationContext() {
-            @Override
-            public Object[] params() {
-                return params;
-            }
-
-            @Override
-            public Settings settings() {
-                return settings;
-            }
-
-            @Override
-            public Map<String, DataType> allowedKeys() {
-                return ImmutableMap.of(
-                    DEFAULT_TENANT_JSON_PROPERTY,
-                    DataType.STRING,
-                    PRIVATE_TENANT_ENABLED_JSON_PROPERTY,
-                    DataType.BOOLEAN,
-                    MULTITENANCY_ENABLED_JSON_PROPERTY,
-                    DataType.BOOLEAN
-                );
-            }
-        });
-    }
-
-    @Override
-    protected Endpoint getEndpoint() {
-        return Endpoint.TENANTS;
-    }
-
-    @Override
-    protected String getResourceName() {
-        return null;
-    }
-
-    @Override
-    protected CType getConfigName() {
+    protected CType getConfigType() {
         return CType.CONFIG;
     }
 
     @Override
-    protected void handleDelete(final RestChannel channel, final RestRequest request, final Client client, final JsonNode content)
-        throws IOException {
-        notImplemented(channel, RestRequest.Method.DELETE);
-    }
+    protected EndpointValidator createEndpointValidator() {
+        return new EndpointValidator() {
 
-    private void multitenancyResponse(final ConfigV7 config, final RestChannel channel) {
-        try (final XContentBuilder contentBuilder = channel.newBuilder()) {
-            channel.sendResponse(
-                new BytesRestResponse(
-                    RestStatus.OK,
-                    contentBuilder.startObject()
-                        .field(DEFAULT_TENANT_JSON_PROPERTY, config.dynamic.kibana.default_tenant)
-                        .field(PRIVATE_TENANT_ENABLED_JSON_PROPERTY, config.dynamic.kibana.private_tenant_enabled)
-                        .field(MULTITENANCY_ENABLED_JSON_PROPERTY, config.dynamic.kibana.multitenancy_enabled)
-                        .endObject()
-                )
-            );
-        } catch (final Exception e) {
-            internalErrorResponse(channel, e.getMessage());
-            LOGGER.error("Error handle request ", e);
-        }
-    }
-
-    @Override
-    protected void handleGet(final RestChannel channel, final RestRequest request, final Client client, final JsonNode content)
-        throws IOException {
-        final SecurityDynamicConfiguration<?> dynamicConfiguration = load(CType.CONFIG, false);
-        final ConfigV7 config = (ConfigV7) dynamicConfiguration.getCEntry(CType.CONFIG.toLCString());
-        multitenancyResponse(config, channel);
-    }
-
-    @Override
-    protected void handlePut(final RestChannel channel, final RestRequest request, final Client client, final JsonNode content)
-        throws IOException {
-        final SecurityDynamicConfiguration<ConfigV7> dynamicConfiguration = (SecurityDynamicConfiguration<ConfigV7>) load(
-            CType.CONFIG,
-            false
-        );
-        final ConfigV7 config = dynamicConfiguration.getCEntry(CType.CONFIG.toLCString());
-        updateAndValidatesValues(config, content);
-        dynamicConfiguration.putCEntry(CType.CONFIG.toLCString(), config);
-        saveAndUpdateConfigs(this.securityIndexName, client, getConfigName(), dynamicConfiguration, new OnSucessActionListener<>(channel) {
             @Override
-            public void onResponse(IndexResponse response) {
-                multitenancyResponse(config, channel);
+            public Endpoint endpoint() {
+                return endpoint;
+            }
+
+            @Override
+            public RestApiAdminPrivilegesEvaluator restApiAdminPrivilegesEvaluator() {
+                return securityApiDependencies.restApiAdminPrivilegesEvaluator();
+            }
+
+            @Override
+            public RequestContentValidator createRequestContentValidator(Object... params) {
+                return RequestContentValidator.of(new RequestContentValidator.ValidationContext() {
+                    @Override
+                    public Object[] params() {
+                        return params;
+                    }
+
+                    @Override
+                    public Settings settings() {
+                        return securityApiDependencies.settings();
+                    }
+
+                    @Override
+                    public Map<String, DataType> allowedKeys() {
+                        return ImmutableMap.of(
+                            DEFAULT_TENANT_JSON_PROPERTY,
+                            DataType.STRING,
+                            PRIVATE_TENANT_ENABLED_JSON_PROPERTY,
+                            DataType.BOOLEAN,
+                            MULTITENANCY_ENABLED_JSON_PROPERTY,
+                            DataType.BOOLEAN
+                        );
+                    }
+                });
+            }
+        };
+    }
+
+    private ToXContent multitenancyContent(final ConfigV7 config) {
+        return (builder, params) -> builder.startObject()
+            .field(DEFAULT_TENANT_JSON_PROPERTY, config.dynamic.kibana.default_tenant)
+            .field(PRIVATE_TENANT_ENABLED_JSON_PROPERTY, config.dynamic.kibana.private_tenant_enabled)
+            .field(MULTITENANCY_ENABLED_JSON_PROPERTY, config.dynamic.kibana.multitenancy_enabled)
+            .endObject();
+    }
+
+    private void multiTenancyConfigApiRequestHandlers(RequestHandler.RequestHandlersBuilder requestHandlersBuilder) {
+        requestHandlersBuilder.allMethodsNotImplemented()
+            .override(GET, (channel, request, client) -> loadConfiguration(getConfigType(), false, false).valid(configuration -> {
+                final var config = (ConfigV7) configuration.getCEntry(CType.CONFIG.toLCString());
+                ok(channel, multitenancyContent(config));
+            }).error((status, toXContent) -> response(channel, status, toXContent)))
+            .override(PUT, (channel, request, client) -> {
+                loadConfigurationWithRequestContent("config", request).valid(
+                    securityConfiguration -> updateMultitenancy(channel, client, securityConfiguration)
+                ).error((status, toXContent) -> response(channel, status, toXContent));
+            });
+    }
+
+    protected void updateMultitenancy(
+        final RestChannel channel,
+        final Client client,
+        final SecurityConfiguration securityConfiguration
+
+    ) throws IOException {
+        @SuppressWarnings("unchecked")
+        final var dynamicConfiguration = (SecurityDynamicConfiguration<ConfigV7>) securityConfiguration.configuration();
+        final var config = dynamicConfiguration.getCEntry(CType.CONFIG.toLCString());
+        updateAndValidatesValues(config, securityConfiguration.requestContent());
+        dynamicConfiguration.putCEntry(CType.CONFIG.toLCString(), config);
+        saveOrUpdateConfiguration(client, dynamicConfiguration, new OnSucessActionListener<>(channel) {
+            @Override
+            public void onResponse(IndexResponse indexResponse) {
+                ok(channel, multitenancyContent(config));
             }
         });
     }
@@ -210,7 +187,8 @@ public class MultiTenancyConfigApiAction extends AbstractApiAction {
             return;
         }
 
-        final Set<String> availableTenants = cl.getConfiguration(CType.TENANTS)
+        final Set<String> availableTenants = securityApiDependencies.configurationRepository()
+            .getConfiguration(CType.TENANTS)
             .getCEntries()
             .keySet()
             .stream()
