@@ -11,24 +11,15 @@
 
 package org.opensearch.security.ssl;
 
-import java.io.IOException;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import net.minidev.json.JSONArray;
-import net.minidev.json.JSONObject;
-import net.minidev.json.parser.JSONParser;
+import com.fasterxml.jackson.databind.JsonNode;
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
-
 import org.opensearch.common.settings.Settings;
+import org.opensearch.security.DefaultObjectMapper;
 import org.opensearch.security.ssl.util.SSLConfigConstants;
 import org.opensearch.security.support.ConfigConstants;
 import org.opensearch.security.test.DynamicSecurityConfig;
@@ -36,6 +27,11 @@ import org.opensearch.security.test.SingleClusterTest;
 import org.opensearch.security.test.helper.cluster.ClusterConfiguration;
 import org.opensearch.security.test.helper.file.FileHelper;
 import org.opensearch.security.test.helper.rest.RestHelper;
+
+import java.io.IOException;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 
 public class SecuritySSLReloadCertsActionTests extends SingleClusterTest {
 
@@ -48,8 +44,8 @@ public class SecuritySSLReloadCertsActionTests extends SingleClusterTest {
     private final String HTTP_CERTIFICATES_LIST_KEY = "http_certificates_list";
     private final String TRANSPORT_CERTIFICATES_LIST_KEY = "transport_certificates_list";
 
-    private final List<Map<String, String>> NODE_CERT_DETAILS = ImmutableList.of(
-        ImmutableMap.of(
+    private final List<Map<String, String>> NODE_CERT_DETAILS = List.of(
+        Map.of(
             "issuer_dn",
             "CN=Example Com Inc. Signing CA,OU=Example Com Inc. Signing CA,O=Example Com Inc.,DC=example,DC=com",
             "subject_dn",
@@ -63,8 +59,8 @@ public class SecuritySSLReloadCertsActionTests extends SingleClusterTest {
         )
     );
 
-    private final List<Map<String, String>> NEW_NODE_CERT_DETAILS = ImmutableList.of(
-        ImmutableMap.of(
+    private final List<Map<String, String>> NEW_NODE_CERT_DETAILS = List.of(
+        Map.of(
             "issuer_dn",
             "CN=Example Com Inc. Signing CA,OU=Example Com Inc. Signing CA,O=Example Com Inc.,DC=example,DC=com",
             "subject_dn",
@@ -96,12 +92,11 @@ public class SecuritySSLReloadCertsActionTests extends SingleClusterTest {
         RestHelper rh = getRestHelperAdminUser();
 
         String clusterHealthResponse = rh.executeSimpleRequest("_cluster/health");
-        JSONParser parser = new JSONParser();
-        JSONObject clusterHealthResponseJson = (JSONObject) parser.parse(clusterHealthResponse);
-        Assert.assertEquals("green", clusterHealthResponseJson.get("status"));
+        final var clusterHealthResponseJson = DefaultObjectMapper.readTree(clusterHealthResponse);
+        Assert.assertEquals("green", clusterHealthResponseJson.get("status").asText());
 
         String catNodesResponse = rh.executeSimpleRequest("_cat/nodes?format=json");
-        JSONArray catNodesResponseJson = (JSONArray) parser.parse(catNodesResponse);
+        final var catNodesResponseJson = DefaultObjectMapper.readTree(catNodesResponse);// (JSONArray) parser.parse(catNodesResponse);
         Assert.assertEquals(clusterConfiguration.getNodes(), catNodesResponseJson.size());
     }
 
@@ -111,8 +106,8 @@ public class SecuritySSLReloadCertsActionTests extends SingleClusterTest {
         RestHelper rh = getRestHelperAdminUser();
         String certDetailsResponse = rh.executeSimpleRequest(GET_CERT_DETAILS_ENDPOINT);
 
-        JSONObject expectedJsonResponse = getInitCertDetailsExpectedResponse();
-        Assert.assertEquals(expectedJsonResponse.toString(), certDetailsResponse);
+        final var expectedJsonResponse = getInitCertDetailsExpectedResponse();
+        Assert.assertEquals(expectedJsonResponse, DefaultObjectMapper.readTree(certDetailsResponse));
 
         // Test Valid Case: Change transport file details to "ssl/pem/node-new.crt.pem" and "ssl/pem/node-new.key.pem"
         updateFiles(newCertFilePath, pemCertFilePath);
@@ -128,8 +123,8 @@ public class SecuritySSLReloadCertsActionTests extends SingleClusterTest {
         RestHelper rh = getRestHelperAdminUser();
 
         String certDetailsResponse = rh.executeSimpleRequest(GET_CERT_DETAILS_ENDPOINT);
-        JSONObject expectedJsonResponse = getInitCertDetailsExpectedResponse();
-        Assert.assertEquals(expectedJsonResponse.toString(), certDetailsResponse);
+        final var expectedJsonResponse = getInitCertDetailsExpectedResponse();
+        Assert.assertEquals(expectedJsonResponse, DefaultObjectMapper.readTree(certDetailsResponse));
 
         // Test Valid Case: Change rest file details to "ssl/pem/node-new.crt.pem" and "ssl/pem/node-new.key.pem"
         updateFiles(newCertFilePath, pemCertFilePath);
@@ -148,13 +143,11 @@ public class SecuritySSLReloadCertsActionTests extends SingleClusterTest {
 
         RestHelper.HttpResponse reloadCertsResponse = rh.executePutRequest(RELOAD_TRANSPORT_CERTS_ENDPOINT, null);
         Assert.assertEquals(500, reloadCertsResponse.getStatusCode());
-        JSONObject expectedResponse = new JSONObject();
-        expectedResponse.appendField(
-            "error",
+        Assert.assertEquals(
             "OpenSearchSecurityException[Error while initializing transport SSL layer from PEM: java.lang.Exception: "
-                + "New Certs do not have valid Issuer DN, Subject DN or SAN.]; nested: Exception[New Certs do not have valid Issuer DN, Subject DN or SAN.];"
+                + "New Certs do not have valid Issuer DN, Subject DN or SAN.]; nested: Exception[New Certs do not have valid Issuer DN, Subject DN or SAN.];",
+            DefaultObjectMapper.readTree(reloadCertsResponse.getBody()).get("error").get("root_cause").get(0).get("reason").asText()
         );
-        Assert.assertEquals(expectedResponse.toString(), reloadCertsResponse.getBody());
     }
 
     @Test
@@ -164,8 +157,8 @@ public class SecuritySSLReloadCertsActionTests extends SingleClusterTest {
 
         String certDetailsResponse = rh.executeSimpleRequest(GET_CERT_DETAILS_ENDPOINT);
 
-        JSONObject expectedJsonResponse = getInitCertDetailsExpectedResponse();
-        Assert.assertEquals(expectedJsonResponse.toString(), certDetailsResponse);
+        final var expectedJsonResponse = getInitCertDetailsExpectedResponse();
+        Assert.assertEquals(expectedJsonResponse, DefaultObjectMapper.readTree(certDetailsResponse));
 
         // Test Valid Case: Reload same certificate
         updateFiles(defaultCertFilePath, pemCertFilePath);
@@ -180,8 +173,8 @@ public class SecuritySSLReloadCertsActionTests extends SingleClusterTest {
         RestHelper rh = getRestHelperAdminUser();
 
         String certDetailsResponse = rh.executeSimpleRequest(GET_CERT_DETAILS_ENDPOINT);
-        JSONObject expectedJsonResponse = getInitCertDetailsExpectedResponse();
-        Assert.assertEquals(expectedJsonResponse.toString(), certDetailsResponse);
+        final var expectedJsonResponse = getInitCertDetailsExpectedResponse();
+        Assert.assertEquals(expectedJsonResponse, DefaultObjectMapper.readTree(certDetailsResponse));
 
         // Test Valid Case: Reload same certificate
         updateFiles(defaultCertFilePath, pemCertFilePath);
@@ -198,37 +191,47 @@ public class SecuritySSLReloadCertsActionTests extends SingleClusterTest {
      * @return True if all assertions pass
      * @throws Exception if rest api failed
      */
-    private void assertReloadCertificateSuccess(RestHelper rh, String updateChannel, JSONObject expectedCertResponse) throws Exception {
+    private void assertReloadCertificateSuccess(RestHelper rh, String updateChannel, JsonNode expectedCertResponse) throws Exception {
         String reloadEndpoint = updateChannel.equals("http") ? RELOAD_HTTP_CERTS_ENDPOINT : RELOAD_TRANSPORT_CERTS_ENDPOINT;
 
         RestHelper.HttpResponse reloadCertsResponse = rh.executePutRequest(reloadEndpoint, null);
         Assert.assertEquals(200, reloadCertsResponse.getStatusCode());
-        JSONObject expectedJsonResponse = new JSONObject();
-        expectedJsonResponse.appendField("message", String.format("updated %s certs", updateChannel));
+        final var expectedJsonResponse = DefaultObjectMapper.objectMapper.createObjectNode();
+        expectedJsonResponse.put("message", String.format("updated %s certs", updateChannel));
         Assert.assertEquals(expectedJsonResponse.toString(), reloadCertsResponse.getBody());
 
         String certDetailsResponse = rh.executeSimpleRequest(GET_CERT_DETAILS_ENDPOINT);
-        Assert.assertEquals(expectedCertResponse.toString(), certDetailsResponse);
+        Assert.assertEquals(expectedCertResponse, DefaultObjectMapper.readTree(certDetailsResponse));
     }
 
     private void updateFiles(String srcFile, String dstFile) {
         FileHelper.copyFileContents(FileHelper.getAbsoluteFilePathFromClassPath(srcFile).toString(), dstFile);
     }
 
-    private JSONObject getUpdatedCertDetailsExpectedResponse(String updateChannel) {
+    private JsonNode getUpdatedCertDetailsExpectedResponse(String updateChannel) {
         String updateKey = (Objects.equals(updateChannel, "http")) ? HTTP_CERTIFICATES_LIST_KEY : TRANSPORT_CERTIFICATES_LIST_KEY;
         String oldKey = (Objects.equals(updateChannel, "http")) ? TRANSPORT_CERTIFICATES_LIST_KEY : HTTP_CERTIFICATES_LIST_KEY;
-        JSONObject updatedCertDetailsResponse = new JSONObject();
-        updatedCertDetailsResponse.appendField(updateKey, NEW_NODE_CERT_DETAILS);
-        updatedCertDetailsResponse.appendField(oldKey, NODE_CERT_DETAILS);
+        final var updatedCertDetailsResponse = DefaultObjectMapper.objectMapper.createObjectNode();
+        updatedCertDetailsResponse.set(updateKey, buildCertsInfoNode(NEW_NODE_CERT_DETAILS));
+        updatedCertDetailsResponse.set(oldKey, buildCertsInfoNode(NODE_CERT_DETAILS));
         return updatedCertDetailsResponse;
     }
 
-    private JSONObject getInitCertDetailsExpectedResponse() {
-        JSONObject initCertDetailsResponse = new JSONObject();
-        initCertDetailsResponse.appendField(HTTP_CERTIFICATES_LIST_KEY, NODE_CERT_DETAILS);
-        initCertDetailsResponse.appendField(TRANSPORT_CERTIFICATES_LIST_KEY, NODE_CERT_DETAILS);
+    private JsonNode getInitCertDetailsExpectedResponse() {
+        final var initCertDetailsResponse = DefaultObjectMapper.objectMapper.createObjectNode();
+        initCertDetailsResponse.set(HTTP_CERTIFICATES_LIST_KEY, buildCertsInfoNode(NODE_CERT_DETAILS));
+        initCertDetailsResponse.set(TRANSPORT_CERTIFICATES_LIST_KEY, buildCertsInfoNode(NODE_CERT_DETAILS));
         return initCertDetailsResponse;
+    }
+
+    private JsonNode buildCertsInfoNode(final List<Map<String, String>> certsInfo) {
+        final var nodeCertDetailsArray = DefaultObjectMapper.objectMapper.createArrayNode();
+        certsInfo.forEach(m -> {
+            final var o = DefaultObjectMapper.objectMapper.createObjectNode();
+            m.forEach(o::put);
+            nodeCertDetailsArray.add(o);
+        });
+        return nodeCertDetailsArray;
     }
 
     /**
